tests/fixtures/invalid/pointer_typedef_to_pointer.c
typedef int *IntPtr;
typedef IntPtr *IntPtrPtr;

int main() {
    int value = 1;
    return value;
}
